Made overflow-hidden for issue body
The scrollbars looked kinda distracting. And since you have an awesome expand animation we aren't using it either.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -83,7 +83,7 @@ article {
 
 .body {
   max-height: 150px;
-  overflow: scroll;
+  overflow: hidden;
   transition:  max-height 4s;
   -moz-transition: max-height 4s;
   -webkit-transition: max-height 4s;
